feat: downgrade to jdk-11