@@ -1,8 +1,5 @@
 package com.duccao.myshopbackend.services;
 
-import static com.duccao.myshopbackend.domains.common.CommonConstants.ADMIN_USERNAME;
-import static lombok.AccessLevel.PRIVATE;
-
 import com.duccao.myshopbackend.domains.dto.RegisteredUserDTO;
 import com.duccao.myshopbackend.domains.dto.UserDTO;
 import com.duccao.myshopbackend.domains.entities.Authority;
@@ -12,12 +9,6 @@ import com.duccao.myshopbackend.exception.InvalidRequestException;
 import com.duccao.myshopbackend.exception.UserAlreadyExistException;
 import com.duccao.myshopbackend.repository.AuthorityRepository;
 import com.duccao.myshopbackend.repository.UserRepository;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import javax.persistence.EntityNotFoundException;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -27,6 +18,16 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+
+import javax.persistence.EntityNotFoundException;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import static com.duccao.myshopbackend.domains.common.CommonConstants.ADMIN_USERNAME;
+import static lombok.AccessLevel.PRIVATE;
 
 @Service
 @Slf4j
@@ -85,7 +86,7 @@ public class UserService {
         .filter(user -> !ADMIN_USERNAME.equalsIgnoreCase(user.getUsername()))
         .sorted(Comparator.comparing(UserEntity::getUsername, String.CASE_INSENSITIVE_ORDER))
         .map(Mapper::convert)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   private List<Authority> findMatchesAuthorities(
